# validc-tools

./: .gitignore  CMakeLists.txt  README.md  build.bat  whitepaper.md
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: run_ed_script_test.cmake
ctest/: ctest.c  ctest.h
ctest/tests/: Makefile  test_ctest_basic.c
docs/: whitepaper.md
fat16/: copy_real_to_vfs.c  copy_vfs_to_real.c  ls.c  vfs.c  vfs.h
led/: bre_test.c  led.c  led.h
led/tests/: Makefile  run_script_tests.bat  test_address_validation_ctest.c  test_append_line_ctest.c  test_dirty_flag_ctest.c  test_free_editor_ctest.c  test_global_commands_ctest.c  test_line_operations_ctest.c  test_long_lines_ctest.c  test_parse_address_ctest.c  test_regex_debug.c  test_substitute_ctest.c  test_verbose_errors_ctest.c  test_write_file_ctest.c
led/tests/scripts/: global_brace.ed  inverse_brace.ed  test_simple_v.ed
level1/: batch.c  bre.c  bre.h  cat.c  cat_manual.txt  checkenc.c  chgenc.c  cp.c  cp_manual.txt  echo.c  echo_manual.txt  fnvtest.c  fnvtest_manual.txt  fnvupdate.c  fnvupdate_manual.txt  ifc.c  ifc_manual.txt  led.c  led_manual.txt  mv.c  mv_manual.txt  rm.c  rm_manual.txt  sed.c  sed_manual.txt
level2/c23lib/: c23lib.c  c23lib.h  c23lib_test.c
level2/ctest/: ctest.c  ctest.h  ctest_manual.txt
level2/sh23/: Makefile  _alias.h  _arithmetic.c  _arithmetic.h  _builtins.c  _builtins.h  _executor.c  _executor.h  _function_store.c  _function_store.h  _main.c  _parser.c  _parser.h  _tokenizer.c  _tokenizer.h  _trap_store.c  _trap_store.h  _variables.c  _variables.h  alias.c  alias.h  alias_store.c  alias_store.h  arithmetic.c  arithmetic.h  builtins.c  builtins.h  control.c  control.h  execute.c  execute.h  executor.c  executor.h  function_store.c  function_store.h  functions.c  functions.h  generate_array.awk  logging.c  logging.h  (+29 more)
level2/sh23/junk/: builtins.c  builtins.h  control.c  control.h  functions.c  functions.h  main.c  parser.c  parser.h  tokenizer.c  tokenizer.h  utils.c  utils.h  variables.c  variables.h
level2/sh23/tests/: escapes.sh  token_tests.txt
level2/vfs/: vfs.c  vfs.h  vfs_client.c  vfs_client_test.c  vfs_server.c
run/: #README#  README.txt
src/batch/: batch.c
src/cat/: cat.c
src/ed/: README  README~  ed.c  ed.h
src/grep/: grep.c
src/lib/: bre.c  bre.h  bre2.c  getopt.c  getopt.h
src/smoltar/: README.md  smoltar.c
src/tr/: tr.c
test/ctest/: ctest.c  ctest.h
test/ctest/tests/: Makefile  test_ctest_basic.c
test/ed/: Makefile  README.md  test_address_range_ctest.c  test_address_validation_ctest.c  test_append_line_ctest.c  test_bre_ctest.c  test_dirty_flag_ctest.c  test_file_operations_ctest.c  test_free_editor_ctest.c  test_global_commands_ctest.c  test_line_operations_ctest.c  test_long_lines_ctest.c  test_parse_address_ctest.c  test_regex_address_ctest.c  test_regex_debug.c  test_simple_commands_ctest.c  test_substitute_ctest.c  test_undo_marks_ctest.c  test_verbose_errors_ctest.c  test_write_file_ctest.c
test/ed/scripts/: actual_global_brace.txt  actual_inverse_brace.txt  simple_test.ed  test_basic_append.ed  test_minimal.ed  test_verbose.ed  test_with_equals.ed  write_basic.ed
test/lib/: bre_test.c  getopt_test.c
